[package]
name = "randvoca"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
