[package]
name = "vinyld"
version = "0.1.0"
authors = ["sisungo <sisungo@icloud.com>"]
edition = "2024"
license = "MIT"
publish = false

[workspace]
members = ["crates/vinioss", "crates/vinutie"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
bitflags = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dotenvy = "0.15"
image = "0.25"
rand = "0.9"
rustls = "0.23"
reqwest = "0.12"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-all"] }
sea-orm-migration = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
vinioss = { path = "./crates/vinioss" }
vinutie = { path = "./crates/vinutie" }
