[package]
name = "trustedcelld"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rusqlite = "0.32"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1", features = ["const_generics", "write"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
