[package]
name = "vinioss"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util"] }
url = "2"
